--- a/inst/rmarkdown/templates/seurat-per-cluster-analysis/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/seurat-per-cluster-analysis/skeleton/skeleton.Rmd
@@ -1,12 +1,12 @@
 ---
-## Updated 2022-05-11.
+## Updated 2022-05-17.
 params:
   title: "Per cluster analysis"
 
   ## Seurat object file.
   seurat_file: !r file.path("rds", "YYYY-MM-DD", "seurat.rds")
 
-title: "`r params[["title"]]`"
+title: "`r params[['title']]`"
 author: "`r getOption('author')`"
 date: "`r Sys.Date()`"
 bibliography: bibliography.bib
