--- a/inst/rmarkdown/templates/seurat-markers/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/seurat-markers/skeleton/skeleton.Rmd
@@ -1,5 +1,5 @@
 ---
-## Updated 2022-05-17.
+## Updated 2022-06-09.
 params:
   title: "Seurat markers"
   ## Seurat
@@ -20,6 +20,7 @@ bibliography: bibliography.bib
 ---
 
 ```{r setup, cache=FALSE, message=FALSE}
+## nolint start
 suppressPackageStartupMessages({
     library(basejump)
     library(Seurat)
@@ -28,6 +29,7 @@ suppressPackageStartupMessages({
 prepareTemplate(package = "pointillism")
 source("_setup.R")
 initDir(params[["results_dir"]])
+## nolint end
 ```
 
 ```{r header, child="_header.Rmd"}
